# pygame_emojis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: display_an_emoji.py  list_emoji_availables.py
pygame_emojis/: __init__.py  from_fonts.py
pygame_emojis/emojis_data/: __init__.py  download.py
